# rtspGrpcServer

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.cpu  README.md  bug.md  docker-compose.cpu.yml  docker-compose.yml  entrypoint.sh  stream_service.pb.cc  stream_service.pb.h  stream_service.proto  编译.md
client/: client.py  example.py  remote_capture.py  remote_video_capture.py  shm.py  shm_capture.py  shm_client.py  stream_service.proto  stream_service_pb2.py  stream_service_pb2_grpc.py  test.py
envoy-gateway/: generate_pb.sh  readme.md  stream.swagger.json  test.py
envoy-gateway/proto/: stream.pb  stream.proto
include/: cpu_decoder.hpp  cuda_decoder.h  cuda_decoder.hpp  cuda_tools.hpp  cuvid_decoder.hpp  decoder_factory.h  decoder_factory.hpp  ffmpeg_decoder.hpp  frame_memory_pool.hpp  hik.hpp  hik_decoder.hpp  hik_url_parser.hpp  interfaces.h  interfaces.hpp  nvjpeg_encoder.h  nvjpeg_encoder.hpp  opencv_decoder.h  opencv_encoder.h  opencv_encoder.hpp  rtsp_service.h  rtsp_service.hpp  stream_task.h  stream_task.hpp  task_scheduler.hpp  thread_pool.hpp  timer_scheduler.hpp  turbojpeg_encoder.hpp  utils.hpp  zero_copy_channel.hpp
src/: cpu_decoder.cpp  cuda_decoder.cpp  cuda_tools.cpp  cuvid_decoder.cpp  decoder_factory.cpp  ffmpeg_decoder.cpp  ffmpeg_demuxer.cpp  hik.cpp  hik_decoder.cpp  hik_url_parser.cpp  main.cpp  nvjpeg_encoder.cpp  opencv_decoder.cpp  opencv_encoder.cpp  rtsp_service.cpp  stream_task.cpp  timer_scheduler.cpp  turbojpeg_encoder.cpp
tools/: save_frames.cpp  stream_info.cpp
workspace/: entrypoint.sh
